# sftp-paperless-bridge

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
sftp_paperless_bridge/: main.py  sftp_server.py
tests/: test_foo.py  test_main.py
