[tool.poetry]
name = "sftp_paperless_bridge"
version = "0.0.1"
description = "This hosts an sftp server that uploads documents to paperless using the HTTP API"
authors = ["Oliver Graff <oliver.e.graff@gmail.com>"]
repository = "https://github.com/ograff/sftp-paperless-bridge"
documentation = "https://ograff.github.io/sftp-paperless-bridge/"
readme = "README.md"
packages = [
  {include = "sftp_paperless_bridge"}
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
paramiko = "^3.5.0"
asyncio = "^3.4.3"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
types-paramiko = "^3.5.0.20240928"
types-requests = "^2.32.0.20241016"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["sftp_paperless_bridge"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # All interfaces
    "S104",
    # Assert
    "S101",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.poetry.scripts]
sftp-paperless-bridge = "sftp_paperless_bridge.main:main"
